syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "InterOpType.proto";
import "ResinCostType.proto";

// CmdId: 809
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message GadgetInteractReq {
	uint32 gadget_entity_id = 9;
	InterOpType op_type = 6;
	uint32 gadget_id = 14;
	bool is_use_condense_resin = 15;
	ResinCostType resin_cost_type = 11;
	uint32 GCIEIJIOADO = 12;
}
