syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message GatherGadgetInfo {
	uint32 item_id = 1;
	bool is_forbid_guest = 2;
}
